--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap');
+html{
+  scroll-behavior: smooth;
+   
+}
 
 *{
   margin: 0;
