--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,14 @@ html{
   scroll-behavior: smooth;
    
 }
-
+  .techImg:hover{
+   transform: scale(1.1);
+   transition: 0.5s;
+ }
+ .projs:hover{
+  transform: scale(1.1);
+  transition: .5s;
+}
 *{
   margin: 0;
   padding: 0;
